Delete play the videos on home page

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -91,41 +91,41 @@
                 <img src="assets/languageLogo/react.png" class="client-logo">
                 <h3 class="text-left title">Pets adoption App</h3>
                 <p class="text-left tag">Redux, Firestore DB, Authentication, and Notification</p>
-                <video height="300" controls>
+                <!-- <video height="300" controls>
                   <source src="assets/videos/React.mov" type="video/mp4">
                   Your browser does not support HTML video.
-                </video>
+                </video> -->
                 <p class="text-left"><a href="https://github.com/nicolecxia/Pet-Adoption-App">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/html5.png" class="client-logo">
                 <h3 class="text-left title">Counter Terrorist</h3>
                 <p class="text-left tag">Counter Terrorist is a game equipment selection program coding in JavaScript.</p>
-                <video width="250" controls>
+                <!-- <video width="250" controls>
                   <source src="assets/videos/JavaScript.mov" type="video/mp4">
                   Your browser does not support HTML video.
-                </video>
+                </video> -->
                 <p class="text-left"><a href="https://counter-terrorist-red.vercel.app/">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/kotlin.png" class="client-logo">
                 <h3 class="text-left title">CozyGO App</h3>
                 <p class="text-left tag">MVVM, Android-based platform, Map API, Calendar API, etc. </p>
-                <video height="300" controls>
+                <!-- <video height="300" controls>
                   <source src="assets/videos/Kotlin.mp4" type="video/mp4">
                   Your browser does not support HTML video.
-                </video>
-                <p class="text-left"><a href="https://github.com/nicolecxia/CapStone-Project">Know More &#8594;</a></p>
+                </video> -->
+                <p class="text-left"><a href="https://www.youtube.com/shorts/7U6CGERTSeY">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/swift.png" class="client-logo">
                 <h3 class="text-left title">Weather Forecast App</h3>
                 <p class="text-left tag">A modern weather forecast app, designed with SwiftUI for a seamless and responsive user experience. </p>
-                <video height="300" controls>
+                <!-- <video height="300" controls>
                   <source src="assets/videos/IOS-Forecast.mov" type="video/mp4">
                   Your browser does not support HTML video.
-                </video>
-                <!-- <p class="text-left"><a href="#">Know More &#8594;</a></p> -->
+                </video> -->
+                <p class="text-left"><a href="https://www.youtube.com/watch?v=w-vRJLzQCsA&list=PLFwoUFUQ8qaBfMX3GUYd9s1D8sjZVGVCf">Know More &#8594;</a></p>
               </div>
             </div>
 
