Modify the React project link

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -95,7 +95,7 @@
                   <source src="assets/videos/React.mov" type="video/mp4">
                   Your browser does not support HTML video.
                 </video> -->
-                <p class="text-left"><a href="https://github.com/nicolecxia/Pet-Adoption-App">Know More &#8594;</a></p>
+                <p class="text-left"><a href="https://www.youtube.com/shorts/BpD0iEjQoQg">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/html5.png" class="client-logo">
