Modify the footer

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -217,15 +217,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center stat-box">
-          <h1 class="purple counter">7</h1>
-          <h3>Years</h3>
+          <h1 class="purple"><span class="counter">7</span>+</h1>
+          <h3>Years of Hands-on Development Experience</h3>
         </div>
         <div class="col-md-4 text-center stat-box">
           <h1 class="blue"><span class="counter">10</span>+</h1>
-          <h3>Projects</h3>
+          <h3>Professional Manufacturing Production Line Quality Control Projects</h3>
         </div>
         <div class="col-md-4 text-center stat-box">
-          <h1 class="pink"><span class="counter">18.3</span>k</h1>
+          <h1 class="pink"><span class="counter">2.5</span>k</h1>
           <h3>Cups of Coffee</h3>
         </div>
       </div>
