Adjust the description

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -56,8 +56,11 @@
           <div class="hero-text">
             <h2><span>Hi, I am</span><br>Changqing Xia.</h2>
             <h3>C# Developer, Mobile App Developer</h3>
-            <h5>I'm a developer with over seven years of experience in WPF development, specializing in C#, Java, JavaScript, React, SQL, Kotlin, and Swift. </h5>
-            <h5>I have a passion for building efficient, user-friendly applications and continuously expanding my expertise. Currently, I’m advancing my skills in mobile app development while pursuing a Post-graduate Certificate in Mobile Application Development.</h5>
+            <br>
+            <h5>- Over seven years of experience in WPF development.</h5>
+            <h5>- Specializing in C#, .NET Framework, Java, JavaScript, React, SQL, Kotlin, and Swift.</h5>
+            <h5>- Passionate for building efficient, user-friendly applications and continuously expanding expertise.</h5>
+            <h5>- Currently, I’m advancing my skills in mobile app development while pursuing a Post-graduate Certificate in Mobile Application Development.</h5>
             <a href="mailto:nicolecxia@outlook.com" class="btn btn-lg btn-primary">Contact With Me</a>
             <ul class="social-links">
               <li class="label">Know me here</li>
