--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -70,6 +70,7 @@
               <li><a href="https://www.linkedin.com/in/changqing-xia/"><img src="assets/linkedin.png"></a>
               </li>
               <li><a href="https://github.com/nicolecxia"><img src="assets/github.png"></a></li>
+              <li><a href="https://notion-next-lake-zeta.vercel.app/"><img src="assets/writeicon.png"></a></li>
             </ul>
           </div>
         </div>
