--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -54,7 +54,7 @@
           </nav>
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
-            <h2><span>Hi, I am</span><br>Changqing Xia.</h2>
+            <h2><span>Hi, I am</span><br>Nicole Xia.</h2>
             <h3>C# Developer, Mobile App Developer</h3>
             <br>
             <h5>- Over seven years of experience in WPF development.</h5>
