Modity the description for projects

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -226,7 +226,7 @@
         </div>
         <div class="col-md-4 text-center stat-box">
           <h1 class="blue"><span class="counter">10</span>+</h1>
-          <h3>Professional Manufacturing Production Line Quality Control Projects</h3>
+          <h3>Professional Quality Control Solutions for Manufacturing Production Lines</h3>
         </div>
         <div class="col-md-4 text-center stat-box">
           <h1 class="pink"><span class="counter">2.5</span>k</h1>
