open a new tab when click on link

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -67,10 +67,10 @@
               <!-- <li><a href="#"><img src="assets/behance.png"></a></li>
                   <li><a href="#"><img src="assets/dribbble.png"></a></li>
                   <li><a href="#"><img src="assets/twitter.png"></a></li> -->
-              <li><a href="https://www.linkedin.com/in/changqing-xia/"><img src="assets/linkedin.png"></a>
+              <li><a href="https://www.linkedin.com/in/changqing-xia/" target="_blank"><img src="assets/linkedin.png"></a>
               </li>
-              <li><a href="https://github.com/nicolecxia"><img src="assets/github.png"></a></li>
-              <li><a href="https://notion-next-lake-zeta.vercel.app/"><img src="assets/writeicon.png"></a></li>
+              <li><a href="https://github.com/nicolecxia" target="_blank"><img src="assets/github.png"></a></li>
+              <li><a href="https://notion-next-lake-zeta.vercel.app/" target="_blank"><img src="assets/writeicon.png"></a></li>
             </ul>
           </div>
         </div>
@@ -91,7 +91,7 @@
                 <img src="assets/languageLogo/csharp.png" class="client-logo">
                 <h3 class="text-left title">Factory quality control systems</h3>
                 <p class="text-left tag">7 years of development, implement and after-sale maintenance in factory quality control systems</p>
-                <p class="text-left"><a href="https://www.chromaate.com/en/product/ims_mes_98019_31">Know More &#8594;</a></p>
+                <p class="text-left"><a href="https://www.chromaate.com/en/product/ims_mes_98019_31" target="_blank">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/react.png" class="client-logo">
@@ -101,7 +101,7 @@
                   <source src="assets/videos/React.mov" type="video/mp4">
                   Your browser does not support HTML video.
                 </video> -->
-                <p class="text-left"><a href="https://www.youtube.com/shorts/BpD0iEjQoQg">Know More &#8594;</a></p>
+                <p class="text-left"><a href="https://www.youtube.com/shorts/BpD0iEjQoQg" target="_blank">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/html5.png" class="client-logo">
@@ -111,7 +111,7 @@
                   <source src="assets/videos/JavaScript.mov" type="video/mp4">
                   Your browser does not support HTML video.
                 </video> -->
-                <p class="text-left"><a href="https://counter-terrorist-red.vercel.app/">Know More &#8594;</a></p>
+                <p class="text-left"><a href="https://counter-terrorist-red.vercel.app/" target="_blank">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/kotlin.png" class="client-logo">
@@ -121,7 +121,7 @@
                   <source src="assets/videos/Kotlin.mp4" type="video/mp4">
                   Your browser does not support HTML video.
                 </video> -->
-                <p class="text-left"><a href="https://www.youtube.com/shorts/7U6CGERTSeY">Know More &#8594;</a></p>
+                <p class="text-left"><a href="https://www.youtube.com/shorts/7U6CGERTSeY" target="_blank">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/swift.png" class="client-logo">
@@ -131,7 +131,7 @@
                   <source src="assets/videos/IOS-Forecast.mov" type="video/mp4">
                   Your browser does not support HTML video.
                 </video> -->
-                <p class="text-left"><a href="https://www.youtube.com/watch?v=w-vRJLzQCsA&list=PLFwoUFUQ8qaBfMX3GUYd9s1D8sjZVGVCf">Know More &#8594;</a></p>
+                <p class="text-left"><a href="https://www.youtube.com/watch?v=w-vRJLzQCsA&list=PLFwoUFUQ8qaBfMX3GUYd9s1D8sjZVGVCf" target="_blank">Know More &#8594;</a></p>
               </div>
             </div>
 
