Change the Swift Section  position with Kotlin

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -114,6 +114,16 @@
                 <p class="text-left"><a href="https://counter-terrorist-red.vercel.app/" target="_blank">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
+                <img src="assets/languageLogo/swift.png" class="client-logo">
+                <h3 class="text-left title">Weather Forecast App</h3>
+                <p class="text-left tag">A modern weather forecast app, designed with SwiftUI for a seamless and responsive user experience. </p>
+                <!-- <video height="300" controls>
+                  <source src="assets/videos/IOS-Forecast.mov" type="video/mp4">
+                  Your browser does not support HTML video.
+                </video> -->
+                <p class="text-left"><a href="https://www.youtube.com/watch?v=zEj5Ktdpebk&list=PLFwoUFUQ8qaBfMX3GUYd9s1D8sjZVGVCf&index=2" target="_blank">Know More &#8594;</a></p>
+              </div>
+              <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/kotlin.png" class="client-logo">
                 <h3 class="text-left title">CozyGO App</h3>
                 <p class="text-left tag">MVVM, Android-based platform, Map API, Calendar API, etc. </p>
@@ -122,16 +132,6 @@
                   Your browser does not support HTML video.
                 </video> -->
                 <p class="text-left"><a href="https://www.youtube.com/shorts/7U6CGERTSeY" target="_blank">Know More &#8594;</a></p>
-              </div>
-              <div class="swiper-slide client-box">
-                <img src="assets/languageLogo/swift.png" class="client-logo">
-                <h3 class="text-left title">Weather Forecast App</h3>
-                <p class="text-left tag">A modern weather forecast app, designed with SwiftUI for a seamless and responsive user experience. </p>
-                <!-- <video height="300" controls>
-                  <source src="assets/videos/IOS-Forecast.mov" type="video/mp4">
-                  Your browser does not support HTML video.
-                </video> -->
-                <p class="text-left"><a href="https://www.youtube.com/watch?v=w-vRJLzQCsA&list=PLFwoUFUQ8qaBfMX3GUYd9s1D8sjZVGVCf" target="_blank">Know More &#8594;</a></p>
               </div>
             </div>
 
