--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -55,7 +55,7 @@
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
             <h2><span>Hi, I am</span><br>Nicole Xia.</h2>
-            <h3>C# Developer, Mobile App Developer</h3>
+            <h3> Full Stack Developer, Mobile App Developer</h3>
             <br>
             <h5>- Over seven years of experience in WPF development.</h5>
             <h5>- Specializing in C#, .NET Framework, Java, JavaScript, React, SQL, Kotlin, and Swift.</h5>
@@ -95,13 +95,19 @@
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/react.png" class="client-logo">
-                <h3 class="text-left title">Pets adoption App</h3>
-                <p class="text-left tag">Redux, Firestore DB, Authentication, and Notification</p>
+                <h3 class="text-left title">Pets Adoption App </h3>
+                <p class="text-left tag">React Native, Redux, Firestore DB, Authentication, and Notification</p>
                 <!-- <video height="300" controls>
                   <source src="assets/videos/React.mov" type="video/mp4">
                   Your browser does not support HTML video.
                 </video> -->
                 <p class="text-left"><a href="https://www.youtube.com/shorts/BpD0iEjQoQg" target="_blank">Know More &#8594;</a></p>
+              </div>
+              <div class="swiper-slide client-box">
+                <img src="assets/languageLogo/Nextjs.png" class="client-logo">
+                <h3 class="text-left title">Shipment Tracker</h3>
+                <p class="text-left tag">Next.js, Material UI, Axios, Redux, ASP.NET Core Web API,Entity Framework Core, Google OAuth </p>
+                <p class="text-left"><a href="https://www.youtube.com/watch?v=qftXqzclE1o" target="_blank">Know More &#8594;</a></p>
               </div>
               <div class="swiper-slide client-box">
                 <img src="assets/languageLogo/html5.png" class="client-logo">
