modify the description

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -55,7 +55,7 @@
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
             <h2><span>Hi, I am</span><br>Nicole Xia.</h2>
-            <h3> Full Stack Developer, Mobile App Developer</h3>
+            <h3> .NET Full Stack Developer, Mobile App Developer</h3>
             <br>
             <h5>- Over seven years of experience in WPF development.</h5>
             <h5>- Specializing in C#, .NET Framework, Java, JavaScript, React, SQL, Kotlin, and Swift.</h5>
