Modify the description

--- a/NicolesResumeWeb/index.html
+++ b/NicolesResumeWeb/index.html
@@ -54,13 +54,13 @@
           </nav>
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
-            <h2><span>Hi, I am</span><br>Nicole Xia.</h2>
+            <h2><span>Hi, I am</span><br>Changqing (Nicole) Xia</h2>
             <h3> .NET Full Stack Developer, Mobile App Developer</h3>
             <br>
             <h5>- Over seven years of experience in WPF development.</h5>
-            <h5>- Specializing in C#, .NET Framework, Java, JavaScript, React, SQL, Kotlin, and Swift.</h5>
+            <h5>- Specializing in C#, .NET, Java, JavaScript, React, SQL, Kotlin, and Swift.</h5>
             <h5>- Passionate for building efficient, user-friendly applications and continuously expanding expertise.</h5>
-            <h5>- Currently, I’m advancing my skills in mobile app development while pursuing a Post-graduate Certificate in Mobile Application Development.</h5>
+            <h5>- Recently earned a Post-Graduate Certificate in Mobile Application Development to advance my expertise in mobile technologies.</h5>
             <a href="mailto:nicolecxia@outlook.com" class="btn btn-lg btn-primary">Contact With Me</a>
             <ul class="social-links">
               <li class="label">Know me here</li>
